--- a/index.html
+++ b/index.html
@@ -6,43 +6,69 @@
     <link rel="stylesheet" href="style.css" />
     <title>Google</title>
   </head>
+
+
   <body>
-    <div class="panel">
-      <nav>
-        <ul class="header">
-          <li class="pic headerli">
-            <a href="https://www.github.com/cengizcmataraci" target="_blank"
-              ><img
-                src="assets/profilepic.jpg"
-                alt=""
-                style="margin-right: 1px;"
-            /></a>
-          </li>
-          <li style="margin: 8px" class="headerli">
-            <a href="https://www.google.com.tr/intl/en/about/products?tab=wh"
-              ><img src="assets/appsbutton.svg" alt="" style="width: 16px; height: 16px; margin-right: 3px;"></a
-            >
-          </li>
-          <li style="margin: 8px; margin-left: -2px;" class="headerli">
-            <a
-              href="https://www.google.com.tr/imghp?hl=en&tab=wi&authuser=0&ogbl"
-              >Images</a
-            >
-          </li>
-          <li style="margin: 8px" class="headerli">
-            <a href="https://mail.google.com/mail/?tab=wm&authuser=0&ogbl"
-              >Gmail</a
-            >
-          </li>
-        </ul>
-      </nav>
-      <div class="container">
-        <img
-          src="assets/googlefirstlogo.png"
-          width="350px"
+
+
+<!-- <nav>
+  <ul class="header">
+    <li class="pic headerli">
+      <a href="https://www.github.com/cengizcmataraci" target="_blank"
+        ><img
+          src="/google_homepage/assets/profilepic.jpg"
           alt=""
-        />
+          style="margin-right: 1px;"
+      /></a>
+    </li>
+    <li style="margin: 8px" class="headerli">
+      <a href="https://www.google.com.tr/intl/en/about/products?tab=wh"
+        ><img src="/google_homepage/assets/appsbutton.svg" alt="" style="width: 16px; height: 16px; margin-right: 3px;"></a
+      >
+    </li>
+    <li style="margin: 8px; margin-left: -2px;" class="headerli">
+      <a
+        href="https://www.google.com.tr/imghp?hl=en&tab=wi&authuser=0&ogbl"
+        >Images</a
+      >
+    </li>
+    <li style="margin: 8px" class="headerli">
+      <a href="https://mail.google.com/mail/?tab=wm&authuser=0&ogbl"
+        >Gmail</a
+      >
+    </li>
+  </ul>
+</nav> -->
+
+
+       <div class="panel">
+        <nav>
+          <ul>
+
+          </li>
+            <li style="margin: 8px" class="headerli">
+              <a href="https://mail.google.com/mail/?tab=wm&authuser=0&ogbl">Gmail</a></li>
+
+            <li style="margin: 8px; margin-left: -2px;" class="headerli">
+              <a href="https://www.google.com.tr/imghp?hl=en&tab=wi&authuser=0&ogbl">Images</a></li>
+
+            <li style="margin: 8px" class="headerli">
+              <a href="https://www.google.com.tr/intl/en/about/products?tab=wh"><img src="assets/appsbutton.svg" alt="" style="width: 16px; height: 16px; margin-right: 3px;"></a></li>
+
+            <li>
+              <a href="https://www.github.com/cengizcmataraci" target="_blank"><img src="assets/profilepic.jpg" alt="" style="margin-right: 1px;"/></a></li>
+          </li>
+
+          </ul>
+        </nav>
+        </div>
+
+
+      <div class="container">
+        <img class="imglogo" src="assets/logo.png" alt="Google Logo"/>
       </div>
+
+
       <div class="search-area">
         <div class="search">
           <div class="search-img">
@@ -58,6 +84,8 @@
               </svg>
             </span>
           </div>
+
+
           <div class="input-enter">
             <div class="input-area">
               <input
@@ -71,15 +99,19 @@
         </div>
       </div>
 
+
+
       <div class="buttons">
-        <a href=""
-          ><button class="googlesearch">Google Search</button></a
+        <a href="https://www.google.com/"
+          ><button id="search" class="googlesearch" value="Google Search">Google Search</button></a
         >
-        <a href=""
-          ><button class="feelinglucky">I'm Feeling Lucky</button></a
+        <a href="https://www.google.com/"
+          ><button id="search" class="feelinglucky" value="Google Search">I'm Feeling Lucky</button></a
         >
       </div>
     </div>
+
+
 
     <nav>
       <ul class="footer">
